// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Skeleton components > should render GridSkeleton 1`] = `
<div>
  <div
    class="grid gap-4 grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5"
  >
    <div
      class="skeleton skeleton--shimmer h-32 w-full"
    />
    <div
      class="skeleton skeleton--shimmer h-32 w-full"
    />
    <div
      class="skeleton skeleton--shimmer h-32 w-full"
    />
    <div
      class="skeleton skeleton--shimmer h-32 w-full"
    />
  </div>
</div>
`;

exports[`Skeleton components > should render ListSkeleton 1`] = `
<div>
  <div
    class="flex flex-col gap-4"
  >
    <div
      class="skeleton skeleton--shimmer w-full h-20"
    />
    <div
      class="skeleton skeleton--shimmer w-full h-20"
    />
    <div
      class="skeleton skeleton--shimmer w-full h-20"
    />
  </div>
</div>
`;

exports[`Skeleton components > should render SkeletonBentoCard 1`] = `
<div>
  <div
    class="card card--default"
    data-slot="card"
  >
    <div
      class="card__header items-start gap-2"
      data-slot="card-header"
    >
      <div
        class="skeleton skeleton--shimmer h-6 w-40"
      />
      <div
        class="skeleton skeleton--shimmer h-4 w-full"
      />
    </div>
    <div
      class="card__content gap-4"
      data-slot="card-content"
    >
      <div
        class="skeleton skeleton--shimmer h-24 w-full"
      />
    </div>
  </div>
</div>
`;

exports[`Skeleton components > should render SkeletonCard 1`] = `
<div>
  <div
    class="skeleton skeleton--shimmer h-32 w-full"
  />
</div>
`;

exports[`Skeleton components > should render SkeletonChart 1`] = `
<div>
  <div
    class="skeleton skeleton--shimmer h-80 w-full"
  />
</div>
`;
